<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">
    <group android:id="@+id/navigation_function"
        android:checkableBehavior="single">
        <item android:id="@+id/navigation_function_item_file"
            android:icon="@drawable/vector_drawable_navigation_menu_file_logo"
            android:title="@string/navigation_menu_file">
        </item>
        <item android:id="@+id/navigation_function_item_picture"
            android:icon="@drawable/vector_drawable_navigation_menu_picture_logo"
            android:title="@string/navigation_menu_picture">
        </item>
        <item android:id="@+id/navigation_function_item_contact"
            android:icon="@drawable/vector_drawable_navigation_menu_contact_logo"
            android:title="@string/navigation_menu_contact">
        </item>
        <item android:id="@+id/navigation_function_item_qrcode"
            android:icon="@drawable/vector_drawable_navigation_menu_qrcode_logo"
            android:title="@string/navigation_menu_qrcode">
        </item>
    </group>

    <group android:id="@+id/navigation_setting"
        android:checkableBehavior="single">
        <item android:id="@+id/drawer_online_cloud"
            android:icon="@drawable/vector_drawable_navigation_menu_setting_logo"
            android:title="@string/navigation_menu_setting">
        </item>
    </group>

</menu>
