<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/main_menu_add"
        android:title="附加功能"
        android:orderInCategory="75"
        app:showAsAction="ifRoom"
        android:icon="@drawable/vector_drawable_main_add_logo"
        >
        <menu>
            <item android:id="@+id/main_menu_add_new_friend"
                android:icon="@drawable/vector_drawable_main_add_friend_logo"
                android:title="@string/index_menu_add_friend_text">
            </item>
            <item android:id="@+id/main_menu_add_group_chat"
                android:icon="@drawable/vector_drawable_main_add_group_logo"
                android:title="@string/index_menu_add_group_text">
            </item>
            <item android:id="@+id/main_menu_add_qr_code"
                android:icon="@drawable/vector_drawable_main_scanning_qrcode_logo"
                android:title="@string/index_menu_qrcode_text">
            </item>
        </menu>
    </item>
</menu>