<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgetCheckActivity"
        android:background="@color/defaultBackgroundColor"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/forget_check_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/vector_drawable_toolbar_back_logo"
                app:elevation="0dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_text"
                    android:textColor="@color/iconTextColor"
                    android:layout_gravity="center"
                    android:textSize="@dimen/toolbar_center_title_size"/>
            </android.support.v7.widget.Toolbar>

            <EditText
                android:id="@+id/forget_input_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_edit_drawable"
                android:drawableLeft="@drawable/vector_drawable_login_phone_logo"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/forget_input_phone_number_hint"
                android:inputType="phone"
                android:maxWidth="11dp"
                android:paddingLeft="12dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                >
                <Button
                    android:id="@+id/forget_get_phone_code"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/default_edit_height"
                    android:background="@drawable/send_message_code_drawable"
                    android:text="@string/sign_get_phone_code_button_text"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true" />

                <EditText
                    android:id="@+id/forget_input_phone_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_edit_height"
                    android:background="@drawable/default_edit_drawable"
                    android:drawableLeft="@drawable/vector_drawable_sign_sms_logo"
                    android:drawablePadding="6dp"
                    android:ems="10"
                    android:hint="@string/sign_input_phone_code_hint"
                    android:maxWidth="6dp"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/forget_get_phone_code"
                    android:layout_marginRight="15dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/forget_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/sign_button_drawable"
                android:text="@string/forget_next_button_text"
                android:textColor="@color/iconTextColor"
                style="?attr/borderlessButtonStyle"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/forget_check_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
        </android.support.design.widget.CoordinatorLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>