<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgetChangeActivity"
        android:fitsSystemWindows="true"
        android:background="@color/defaultBackgroundColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:id="@+id/forget_check_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:elevation="0dp"
                app:navigationIcon="@drawable/vector_drawable_toolbar_back_logo">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_change_text"
                    android:textColor="@color/iconTextColor"
                    android:layout_gravity="center"
                    android:textSize="@dimen/toolbar_center_title_size"/>
            </android.support.v7.widget.Toolbar>

            <EditText
                android:id="@+id/forget_input_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/default_edit_drawable"
                android:drawableLeft="@drawable/vector_drawable_login_password_logo"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/forget_input_new_password_hint"
                android:inputType="textPassword"
                android:maxWidth="11dp"
                android:paddingLeft="12dp"
                />

            <EditText
                android:id="@+id/forget_reinput_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:background="@drawable/default_edit_drawable"
                android:ems="10"
                android:hint="@string/forget_reinput_new_password_hint"
                android:inputType="textPassword"
                android:maxWidth="11dp"
                android:paddingLeft="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"/>

            <Button
                android:id="@+id/forget_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/sign_button_drawable"
                android:text="@string/forget_confirm_changes_button_text"
                android:textColor="@color/iconTextColor"
                style="?attr/borderlessButtonStyle"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/forget_change_snackBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
        </android.support.design.widget.CoordinatorLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>