<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/defaultBackgroundColor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <ImageView
                android:id="@+id/login_user_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginTop="120dp"
                android:layout_centerHorizontal="true" />
            <EditText
                android:id="@+id/login_input_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/login_edit_drawable"
                android:drawableLeft="@drawable/vector_drawable_login_phone_logo"
                android:drawablePadding="6dp"
                android:paddingLeft="12dp"
                android:hint="@string/login_input_account_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:layout_below="@id/login_user_image"
                android:text="@{bmob.username}"
                />
            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_height"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edit_drawable"
                android:drawableLeft="@drawable/vector_drawable_login_password_logo"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/login_input_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:layout_below="@id/login_input_phone" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_button_drawable"
                android:text="@string/login_button_text"
                android:textColor="@color/iconTextColor"
                android:textSize="20sp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@id/login_input_password"
                android:foreground="?attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/login_forget_pwd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_forget_password_text"
                android:layout_below="@id/login_button"
                android:layout_alignLeft="@id/login_button" />


            <TextView
                android:id="@+id/login_sign_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_sign_text"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/login_button"
                android:layout_alignRight="@id/login_button"/>

            <TextView
                android:id="@+id/login_quick_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="64dp"
                android:drawableLeft="@drawable/login_quick_left_drawable"
                android:drawableRight="@drawable/login_quick_right_drawable"
                android:text="@string/login_quick_login"
                android:textAlignment="center"
                android:layout_below="@id/login_button" />

            <ImageView
                android:id="@+id/login_quick_qq_button"
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/vector_drawable_login_quick_qq_logo"
                android:layout_marginTop="15dp"
                android:layout_below="@id/login_quick_text"
                tools:ignore="VectorDrawableCompat"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/login_quick_wechat"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@id/login_quick_qq_button"
                android:layout_alignTop="@id/login_quick_qq_button"
                app:srcCompat="@drawable/vector_drawable_login_quick_wechat_logo"
                tools:ignore="RtlHardcoded,VectorDrawableCompat" />

            <ImageView
                android:id="@+id/login_quick_weibo"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="0dp"
                android:layout_alignTop="@id/login_quick_qq_button"
                android:layout_toRightOf="@id/login_quick_qq_button"
                app:srcCompat="@drawable/vector_drawable_login_quick_weibo_logo"
                tools:ignore="VectorDrawableCompat" />

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/login_snackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
            </android.support.design.widget.CoordinatorLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <data>
        <variable
            name="bmob"
            type="cn.bmob.v3.BmobUser"/>
    </data>
</layout>